; ModuleID = '/home/carl/AnghaBench/darwin-xnu/security/extr_mac_alloc.c_mac_wire.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/security/extr_mac_alloc.c_mac_wire.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@kalloc_map = common dso_local global i32 0, align 4
@VM_PROT_READ = common dso_local global i32 0, align 4
@VM_PROT_WRITE = common dso_local global i32 0, align 4
@VM_KERN_MEMORY_SECURITY = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mac_wire(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load i32, i32* @kalloc_map, align 4
  %6 = load i8*, i8** %3, align 8
  %7 = call i32 @CAST_USER_ADDR_T(i8* %6)
  %8 = load i8*, i8** %4, align 8
  %9 = call i32 @CAST_USER_ADDR_T(i8* %8)
  %10 = load i32, i32* @VM_PROT_READ, align 4
  %11 = load i32, i32* @VM_PROT_WRITE, align 4
  %12 = or i32 %10, %11
  %13 = load i32, i32* @VM_KERN_MEMORY_SECURITY, align 4
  %14 = load i32, i32* @FALSE, align 4
  %15 = call i32 @vm_map_wire_kernel(i32 %5, i32 %7, i32 %9, i32 %12, i32 %13, i32 %14)
  ret i32 %15
}

declare dso_local i32 @vm_map_wire_kernel(i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @CAST_USER_ADDR_T(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
